# molecula

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  molecula.code-workspace
docker-env/: docker-compose.yml  trino.md  trino.yml
docker-env/trino/etc/: config.properties  jvm.config
docker-env/trino/etc/catalog/: iceberg.properties
molecula/: CMakeLists.txt
molecula/common/: ByteBuffer.cpp  ByteBuffer.hpp  ByteBuffer_Test.cpp  CMakeLists.txt  Common.cpp  Common.hpp  Common_Test.cpp  PropertyMap.cpp  PropertyMap.hpp  PropertyMap_Test.cpp  types.hpp
molecula/compiler/: CMakeLists.txt  Compiler.cpp  Compiler.hpp
molecula/http_client/: CMakeLists.txt  HttpClient.cpp  HttpClient.hpp  HttpClientCurl.cpp  HttpClientCurl.hpp  HttpClientImpl.cpp  HttpClientImpl.hpp  HttpClient_Test.cpp
molecula/iceberg/: CMakeLists.txt  Iceberg.cpp  Iceberg.hpp  IcebergMetadataDb.cpp  IcebergMetadataDb.hpp  IcebergMetadataDb_Test.cpp  Iceberg_Test.cpp  json.cpp  json.hpp
molecula/iceberg/sql/: insert_table.sql
molecula/s3/: CMakeLists.txt  S3Client.cpp  S3Client.hpp  S3ClientImpl.cpp  S3ClientImpl.hpp  S3Client_Test.cpp  S3Request.cpp  S3Request.hpp  S3Request_Test.cpp
molecula/server/: CMakeLists.txt  Server.cpp  Server.hpp  main.cpp
molecula/storage/: CMakeLists.txt  S3AsyncClient.cpp  S3AsyncClient.hpp
src/: CMakeLists.txt
src/compiler/: CMakeLists.txt  Compiler.cpp  Compiler.hpp
src/server/: CMakeLists.txt  main.cpp
test_data/: http_server.sh  poem.txt
